deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quelpoke-robin
  namespace: robin
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/robin: quelpoke-robin
  template:
    metadata:
      labels:
        app.kubernetes.io/robin: quelpoke-robin
    spec:
      containers:
      - name: quelpoke-robin
        image: europe-west9-docker.pkg.dev/infal-devops-sysops/student-robin/quelpoke:1724838657
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
