service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-robin
spec:
  selector:
    app.kubernetes.io/robin: quelpoke-robin
  ports:
    - name: service-port-8080
      protocol: TCP
      port: 80
      targetPort: 8080
