automate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quelpoke-robin
  namespace: robin
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/robin: quelpoke-robin
  template:
    metadata:
      labels:
        app.kubernetes.io/robin: quelpoke-robin
    spec:
      containers:
      - name: quelpoke-robin
        image: europe-west9-docker.pkg.dev/infal-devops-sysops/student-robin/quelpoke:$DOCKER_TAG
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service-robin
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{"name": "service-robin"}}}'
spec:
  selector:
    app.kubernetes.io/robin: quelpoke-robin
  ports:
    - name: service-port-8080
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-robin
  namespace: robin
spec:
  parentRefs:
  - kind: Gateway
    name: external-http-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /robin
    backendRefs:
    - name: service-robin
      port: 80
