httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-robin
  namespace: robin
spec:
  parentRefs:
  - kind: Gateway
    name: external-http-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /robin
    backendRefs:
    - name: service-robin
      port: 8080
